# ada-project-example

./: .clangd  .gitignore  .gitpod.Dockerfile  .gitpod.yml  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  cmake-variants.yaml
.devcontainer/: devcontainer.json
.github/workflows/: docker-publish.yml
.west/: config
app/: .clang-format  .clang-tidy  .cmake-format.py  CMakeLists.txt  KConfig  app.gpr  prj_rtt_shell.conf  prj_uart_shell.conf  west.yml
app/boards/: stm32f429i_disc1.overlay
app/cmake/: CMakeAda.cmake
app/src/: hello.adb  hello.ads  main.cpp  put_time.adb  put_time.ads
utils/: RenodeLoadScript.resc  launch_renode.sh  renode_uart.sh  rtt_telnet.sh
